<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@android:drawable/edit_text"
        android:ems="10"
        android:hint="@string/urHint"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:textColor="@color/black">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="@string/pwHint"
        android:layout_margin="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:drawable/edit_text"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textPassword">
    </EditText>

    <!--20200422 Added-->

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/login"
            android:background="#4a4d4a"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_alignBottom="@+id/progressBarLogin" />

        <ProgressBar
            android:id="@+id/progressBarLogin"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:visibility="invisible"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />

    </RelativeLayout>

    <!--20200429 Modify layout of checkbox-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tv_checkprivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/checkBoxPrivacy"
            android:text="@string/login_privacy"
            android:textColor="@android:color/black"
            android:paddingBottom="3dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/loginTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:text="@string/login_tip"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:text="@string/forgot_pwd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/red" />

</LinearLayout>
